# toolgen-synthetic-tooluse-generator

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
data/raw/: sample_tools.json  sample_tools_rich.json
src/toolgen/: __init__.py
src/toolgen/evaluation/: __init__.py  judge.py
src/toolgen/executor/: __init__.py  mock_executor.py  state.py
src/toolgen/generator/: __init__.py  models.py  orchestrator.py  planner.py  steering.py  validators.py
src/toolgen/graph/: builder.py  models.py
src/toolgen/registry/: __init__.py  loader.py  models.py  normalize.py
tests/: test_cli_smoke.py  test_e2e_pipeline.py  test_evaluation.py  test_executor.py  test_generator.py  test_graph.py  test_quality_improvements.py  test_registry.py  test_repair.py  test_steering.py  test_validators.py
toolgen/: cli.py  config.py
toolgen/evaluation/: metrics.py
toolgen/generator/: repair.py
toolgen/graph/: __init__.py  sampler.py
toolgen/utils/: __init__.py  io.py
