[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolgen"
version = "0.1.0"
description = "Minimal offline synthetic tool-use conversation generator skeleton."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
toolgen = "toolgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
